# crewai_tf_docs

./: .env.example  .gitignore  README.md  pyproject.toml
src/crewai_tf_docs/: crew.py  main.py
src/nis2_crew/: main.py
terraform/.github/workflows/: terraform_apply.yaml
terraform/Scripts/: create-terraform-storage.sh
terraform/terraform/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
terraform/terraform/modules/acr/: acr.tf  outputs.tf  variables.tf
terraform/terraform/modules/aks/: aks.tf  ingress-controller-nginx.tf  variables.tf
terraform/terraform/modules/appinsights/: appinsights.tf  variables.tf
terraform/terraform/modules/keyvault/: keyvault.tf  variables.tf
terraform/terraform/modules/log-analytics/: la.tf  variables.tf
terraform/terraform/modules/openai/: main.tf  variables.tf
terraform/terraform/modules/searchservice/: main.tf  output.tf  variables.tf
terraform/terraform/modules/sql/: main.tf  output.tf  variables.tf
terraform/terraform/modules/vnet/: outputs.tf  variables.tf  vnet.tf
terraform/vars/: production.tfvars
